Fix dropdown overflow on mobile (flarum/core#2070) (#46)
* Fix dropdown overflow on mobile (flarum/core#2070)

--- a/extensions/mentions/less/forum.less
+++ b/extensions/mentions/less/forum.less
@@ -91,3 +91,8 @@
   position: absolute;
   .Button--color(@tooltip-color, @tooltip-bg);
 }
+@media screen and (max-width: @screen-phone-max) {
+  .MentionsDropdown {
+    max-width: 100%;
+  }
+}
